fix ... overlapping with calculator border

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body, html{
     text-align: right;
     font-family: 'Roboto', sans-serif;
     font-size: 50px;
-    padding: 30px 15px 0 10px;
+    padding: 30px 20px 0 10px;
 }
 
 button {
